--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.8",
     "axios": "^0.26.0",
+    "i18next": "^21.6.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
