--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.18.8",
     "axios": "^0.26.0",
     "i18next": "^21.6.12",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
