--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.8",
     "axios": "^0.26.0",
+    "framer-motion": "^6.2.8",
     "i18next": "^21.6.12",
     "moment": "^2.29.1",
     "react": "^17.0.2",
