--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "i18next": "^21.6.12",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1",
