--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
+    "react-password-strength-bar": "^0.4.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
