--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-i18next": "^11.15.5",
     "react-password-strength-bar": "^0.4.0",
     "react-router-dom": "^6.2.1",
