--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,7 @@
     "class-validator": "^0.13.2",
     "framer-motion": "^6.2.8",
     "i18next": "^21.6.12",
-    "moment": "^2.29.1",
+    "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
