--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.18.8",
     "axios": "^0.26.1",
     "class-validator": "^0.13.2",
+    "country-state-city": "^3.0.1",
     "framer-motion": "^6.2.8",
     "i18next": "^21.6.12",
     "moment": "^2.29.2",
