--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-ga": "^3.3.0",
     "react-i18next": "^11.15.5",
     "react-password-strength-bar": "^0.4.0",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-simple-maps": "^2.3.0",
