--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Plug and work",
+  "name": "Plug and work",
   "icons": [
     {
       "src": "favicon.ico",
